<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp">

    <ImageView
        android:id="@+id/app_item_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        app:srcCompat="@mipmap/icon" />

    <Button
        android:id="@+id/app_item_download_button"
        android:background="@drawable/app_description_item_download_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/ui_button_height"
        android:text="@string/download"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/app_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/app_item_icon"
        android:layout_toStartOf="@id/app_item_download_button"
        android:text="@string/app_name"
        style="@style/AppTheme.UI.FontEmphasize"/>

    <TextView
        android:id="@+id/app_item_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_item_name"
        android:layout_toEndOf="@id/app_item_icon"
        android:layout_toStartOf="@id/app_item_download_button"
        android:text="@string/app_size" />

    <TextView
        android:id="@+id/app_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_item_size"
        android:layout_toEndOf="@id/app_item_icon"
        android:layout_toStartOf="@id/app_item_download_button"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/app_description" />

</RelativeLayout>
